-Ajustes minimos en caso de crear expendientes, - Inicio de creacion de mensaje global

--- a/Views/Expedientes/Index.cshtml
+++ b/Views/Expedientes/Index.cshtml
@@ -151,11 +151,11 @@
             </div>
 
             <!-- BOTÓN REPORTE -->
-            <a asp-action="ExportarPdf"
+           @*  <a asp-action="ExportarPdf"
                asp-route-identificacion="001-190898-1056B"
                class="btn btn-danger shadow">
                 <i class="bi bi-file-earmark-pdf me-1"></i> Generar Reporte PDF
-            </a>
+            </a> *@
 
         </div>
     </div>
